# Code-Practice

./: .gitignore  README.md
HyperPython/: info.txt
HyperPython/00_intro/: Python_basics.py
HyperPython/01_advection_equation/: The_Lax-Friedrichs_method.py  advection_equation.py  upwind_method.py  upwind_method_modified.py  upwind_method_modified_with_animation.py  upwind_method_modified_with_animation_add_sinusoid.py
HyperPython/02_traffic_flow/: traffic_flow.py  traffic_flow_with_red_and_green_light.py  traffic_flow_with_red_light.py  traffic_flow_with_the_Lax-Friedrichs_method.py  traffic_flow_with_util.py
HyperPython/03_High-resolution_methods/: LaxFriedrichs_RK.py  Local_LaxFriedrichs_RK_with_minmod_slope.py
HyperPython/04_Fluid_dynamics/: euler_equations.py
HyperPython/05_limiter/: TVD_limiter.py  limiter01.py  limiter02.py  myReproduce_TVD_limiter.py  test.py  test1.py  weno5th.py
HyperPython/util/: myianimate.py
RiemannPython/: Characteristics.py  compound_wavess.py  lines_of_rarefactions.py  lines_of_shocks.py  plot_characteristics_to_Burger_eq.py
RiemannPython/Shallow_Water_Equations/: Rarefaction_waves.py
filePython/: a.npy  info.txt  main.py  npyfile.py
myCFDPython/: requirements.txt
myCFDPython/00_intro/: intro.py  main.py
myCFDPython/01_Linear_Convection_1D/: Linear_Convection_1D.py
myCFDPython/02_Nonlinear_Convection_1D/: Nonlinear_Convection_1D.py
myCFDPython/03_Diffusion_Equation_1D/: Diffusion_Equation_1D.py
myCFDPython/04_Convection_Diffusion_1D/: Convection_Diffusion_1D.py
myCFDPython/05_Linear_Convection_2D/: Linear_Convection_2D.py  test1.py  test2.py  test3.py
myCFDPython/06_Nonlinear_Convection_2D/: Nonlinear_Convection_2D.py
myCFDPython/07_Diffusion_Equation_2D/: Diffusion_Equation_2D.py
myCFDPython/08_Convection_Diffusion_2D/: Convection_Diffusion_2D.py
myCFDPython/09_Laplace_Equation_2D/: Laplace_Equation_2D.py
myCFDPython/09_Laplace_Equation_2D/Subdocument/: Laplace_Equation_2D.py  laplace2d.py
myCFDPython/09_Laplace_Equation_2D/Subdocument/plot/: __init__.py  plot.py
myCFDPython/10_Poisson_Equation_2D/: Poisson_Equation_2D.py
myCFDPython/11_Cavity_Flow_with_Navier_Stokes_2D/: Cavity_Flow_with_Navier_Stokes.py
myCFDPython/12_Channel_Flow_with_Navier_Stokes_2D/: Channel_Flow_with_Navier_Stokes.py
myCFDPython/CFL_Condition/: Linear_Convection_1D.py
myCFDPython/myTest/: Array_Operations_with_NumPy.py  Defining_Functions_in_Python.py  test1.py
myMultiphasePython/PLIC-VOF-fine/: calc_normal_vecter.py  interface_propagation.py  interface_reconstruction.py  main.py  mainy.py  myplot.py  unsolved.txt
myMultiphasePython/PLIC-VOF-fine-backup/: 1124.py  calc_normal_vecter.py  delete.py  delete1.py  interface_propagation.py  interface_propagation1125.py  interface_propagation_OLD.py  interface_propagation_backup1125.py  interface_reconstruction.py  interface_reconstruction_backup.py  interface_reconstruction_backup2225.py  interface_reconstruction_using_inversefunc.py  main.py  main3.py  mainx.py  test.py  test2.py  test3.py  unsolved.txt  删除1.py
myMultiphasePython/PLIC-VOF-fine-backup/abandonedCode/: main.py
myMultiphasePython/PLIC-VOF-fine/abandonedCode/: calc_normal_vecter.py  interface_propagation.py  interface_reconstruction.py  myplot.py  readme.txt
myMultiphasePython/level-set-fine/: interface_propagation.py  main.py  myplot.py  re_init.py
src/cpp/4/: 4.1.cpp  4.2.5.cpp  Constructor1.cpp  Initialization_list.cpp  a.out  copyConstructor.cpp  deepcopy.cpp  main.cpp  objectMember.cpp
src/cpp/4/4.1.4/: class1.cpp  class1.h  main.cpp
src/cpp/4/4.2.8/: staticFunction.cpp  staticMember.cpp
src/cpp/4/4.3.1/: main1.cpp
src/cpp/4/4.3.2/: nullpointer.cpp  this.cpp
src/cpp/4/4.3.4/: constFunc.cpp
src/cpp/4/4.4.1/: friend1.cpp  friend2.cpp  friend3.cpp
src/cpp/4/4.5/: operator().cpp  operator++.cpp  operator+.cpp  operator<<.cpp  operator=.cpp  operator==.cpp
src/cpp/4/4.6/: InheritanceMode.cpp  constructionSequence.cpp  diamondInheritance.cpp  inheritance.cpp  membersWithSameName.cpp  multiInteritance.cpp  objectModel.cpp  staticMembersWithSameName.cpp
src/cpp/4/4.7/: main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp
src/cpp/5/: main1.cpp  main2.cpp  main3.cpp  main4.cpp
src/fortran/2/: main.f90  minus_array.f90  minus_array_f_mod.f90
src/fortran/3/: exampleFuncs_mod.f90  main.f90
src/fortran/4/: main.f90
src/fortran/5/: main.f90  point_class.f90
src/fortran/6/: array2d_mod.f90  array2d_smod.f90  main.f90
src/fortran/cfortran/FortranCallC/: CToF_mod.f90  add.c  main.f90
src/fortran/cfortran/cCallFortran/: add.h  add_mod.f90  main.c
src/fortran/cfortran/cppCallFortran/: add.h  add_mod.f90  main.cpp
src/fortran/cfortran/printFortranAddr/: main.f90  print_address.c
src/latex/test01/: document.tex
src/latex/test02/: latexbasic.tex
src/latex/test03/: latexCN.tex
src/latex/test04/: latexTextFormat.tex
src/latex/test05/: latexDocStruct.tex
src/latex/test06/: latexSpecialChar.tex
src/latex/test07/: latexGraphics.tex
src/latex/test08/: latexTable.tex
src/latex/test09/: latexMathBasics.tex
src/latex/test10/: latexMatrix.tex
src/latex/test11/: LatexMultiMath.tex
src/latex/test12/: RefData.bib  latexReference.tex
src/latex/test13/: latexRefBibLaTeX.tex
src/latex/test14/: latexNewCommand.tex
src/myMake/CMake/5.3.1/: CMakeLists.txt  (+1 more)
src/myMake/CMake/7/: CMakeLists.txt  main.cpp
src/myMake/CMake/7/include/: Soldier.h
src/myMake/CMake/7/src/: Gun.cpp  Soldier.cpp
src/myMake/CMake/learnCMake/cmake01/: CMakeLists.txt
src/myMake/CMake/learnCMake/cmake02/: CMakeLists.txt
src/myMake/CMake/learnCMake/cmake02/src/: CMakeLists.txt
src/myMake/CMake/learnCMake/cmake03/: CMakeLists.txt
src/myMake/CMake/learnCMake/cmake03/src/: CMakeLists.txt
src/myMake/CMake/learnCMake/cmake04/lib/: CMakeLists.txt  hello.cpp
src/myMake/CMake/learnCMake/cmake05/src/: CMakeLists.txt  main.cpp
src/myMake/CMake/learnCMake/xiaobing/5.3.2/: CMakeLists.txt  README  main.cpp
src/myMake/CMake/learnCMake/xiaobing/5.3.2/src/: swap.cpp
(+10 files in other folders)
